--- a/src/tunnel-server/Cargo.toml
+++ b/src/tunnel-server/Cargo.toml
@@ -28,3 +28,4 @@ dashmap = { workspace = true }
 bcrypt = { workspace = true }
 tokio-tungstenite = { workspace = true }
 clap = { workspace = true }
+chrono = { workspace = true }
