--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["src/tshare", "src/tunnel-server", "src/web-server"]
 resolver = "2"
 
 [workspace.package]
-version = "1.0.0"
+version = "1.0.1"
 authors = ["RobbyV2 <robby@robby.blue"]
 license = "MIT"
 repository = "https://github.com/RobbyV2/tshare"
@@ -43,6 +43,12 @@ dashmap = "6.1"
 
 # Security dependencies
 bcrypt = "0.17"
+
+# Date/time dependencies
+chrono = { version = "0.4", features = ["serde"] }
+
+# JWT dependencies
+jsonwebtoken = "9.3"
 
 # Dioxus dependencies
 dioxus = { version = "0.6", features = ["fullstack", "router"] }
