--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
-members = ["src/tshare", "src/tunnel-server", "src/web-server"]
+members = ["src/tshare"]
 resolver = "2"
 
 [workspace.package]
-version = "1.0.1"
+version = "1.0.2"
 authors = ["RobbyV2 <robby@robby.blue"]
 license = "MIT"
 repository = "https://github.com/RobbyV2/tshare"
