--- a/src/tshare/Cargo.toml
+++ b/src/tshare/Cargo.toml
@@ -29,3 +29,8 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 crossterm = { workspace = true }
 ctrlc = { workspace = true }
+axum = { workspace = true }
+dashmap = { workspace = true }
+bcrypt = { workspace = true }
+chrono = { workspace = true }
+uuid = { workspace = true }
