--- a/src/tshare/Cargo.toml
+++ b/src/tshare/Cargo.toml
@@ -14,6 +14,10 @@ edition.workspace = true
 name = "tshare"
 path = "src/main.rs"
 
+[lib]
+name = "tshare"
+path = "src/lib.rs"
+
 [dependencies]
 tokio = { workspace = true }
 clap = { workspace = true }
